@@ -19,6 +19,7 @@
 
 package org.apache.cayenne.access.translator.select;
 
+import org.apache.cayenne.exp.Expression;
 import org.apache.cayenne.exp.path.CayennePath;
 import org.apache.cayenne.map.DbEntity;
 import org.apache.cayenne.map.DbRelationship;
@@ -38,20 +39,24 @@ class TableTreeNode {
     // relationship that connects this node with parent (or null if this is root)
     private final DbRelationship relationship;
 
+    private final Expression additionalQualifier;
+
     TableTreeNode(DbEntity entity, String tableAlias) {
         this.attributePath = CayennePath.EMPTY_PATH;
         this.entity = entity;
         this.tableAlias = tableAlias;
         this.relationship = null;
         this.joinType = null;
+        this.additionalQualifier = null;
     }
 
-    TableTreeNode(CayennePath path, DbRelationship relationship, String tableAlias, JoinType joinType) {
+    TableTreeNode(CayennePath path, DbRelationship relationship, String tableAlias, JoinType joinType, Expression additionalQualifier) {
         this.attributePath = path;
         this.entity = relationship.getTargetEntity();
         this.tableAlias = tableAlias;
         this.relationship = relationship;
         this.joinType = joinType;
+        this.additionalQualifier = additionalQualifier;
     }
 
     public CayennePath getAttributePath() {
@@ -72,5 +77,9 @@ class TableTreeNode {
 
     public DbRelationship getRelationship() {
         return relationship;
+    }
+
+    public Expression getAdditionalQualifier() {
+        return additionalQualifier;
     }
 }
