@@ -42,6 +42,9 @@ import org.apache.cayenne.map.SQLResult;
 import org.apache.cayenne.query.Ordering;
 import org.apache.cayenne.query.QueryMetadata;
 
+import static org.apache.cayenne.access.sqlbuilder.SQLBuilder.exp;
+import static org.apache.cayenne.access.sqlbuilder.SQLBuilder.node;
+
 /**
  * Context that holds all data necessary for query translation as well as a result of that translation.
  *
@@ -289,6 +292,14 @@ public class TranslatorContext implements SQLGenerationContext {
 
     void setQualifierNode(Node qualifierNode) {
         this.qualifierNode = qualifierNode;
+    }
+
+    void appendQualifierNode(Node qualifierNode) {
+        if(this.qualifierNode == null) {
+            this.qualifierNode = qualifierNode;
+        } else {
+            this.qualifierNode = exp(node(this.qualifierNode)).and(node(qualifierNode)).build();
+        }
     }
 
     Node getQualifierNode() {
